Bugfix [TEST] for sticky navbar on mobile

--- a/main.css
+++ b/main.css
@@ -56,6 +56,8 @@ ul {
 .navbar {
 	position: sticky;
 	top: 0;
+	margin: 0;
+	left: 0;
 	background-color: #10100e;
 	z-index: 1;
 	border-bottom: 1px solid #fdb034;
